--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Name
+name: Jaswanth Yella
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: PhD student at University of Cincinnati
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://media.licdn.com/dms/image/C5603AQHG75SgUlaRCA/profile-displayphoto-shrink_200_200/0?e=1570665600&v=beta&t=S1FV4LX8lzv-4J1I6QGEc1bWE1w06Enuqu3Y7-l62MI
 
 #
 # Flags below are optional
@@ -18,15 +18,15 @@ avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/je
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
+  email: yellajk@mail.uc.edu
   facebook:
   flickr:
-  github: barryclark/jekyll-now
-  instagram:
+  github: yellajaswanth
+  instagram: yellajaswanth
   linkedin:
   pinterest:
   rss: # just type anything here for a working RSS icon
-  twitter: jekyllrb
+  twitter: yellajaswanth
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
@@ -47,7 +47,7 @@ url:
 # (http://yourusername.github.io/repository-name)
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
-baseurl: ""
+baseurl: "/"
 
 #
 # !! You don't need to change any of the configuration flags below !!
