--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,8 @@ footer-links:
   facebook:
   flickr:
   github: yellajaswanth
-  instagram: yellajaswanth
-  linkedin:
+  instagram: 
+  linkedin: yellajaswanth
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter: yellajaswanth
