--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Jaswanth Yella
 description: PhD student at University of Cincinnati
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://media.licdn.com/dms/image/C5603AQHG75SgUlaRCA/profile-displayphoto-shrink_200_200/0?e=1570665600&v=beta&t=S1FV4LX8lzv-4J1I6QGEc1bWE1w06Enuqu3Y7-l62MI
+avatar: images/profile_pic.jpeg
 
 #
 # Flags below are optional
