--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Jaswanth Yella
 description: PhD student at University of Cincinnati
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: images/profile_pic.jpeg
+avatar: https://avatars.githubusercontent.com/u/3152270?s=400&u=658a454588a6ff612a288089262171d04dfff0d4&v=4
 
 #
 # Flags below are optional
